k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ibtech-agent
  labels:
    name: ibtech-agent
    app: ibtech-agent-platform
